k8s/namspace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: streaming-platform
  labels:
    name: streaming-platform
