k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-deployment
  namespace: streaming-platform
  labels:
    app: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: streaming.local
    http:
      paths:
      - path: /encoding(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: encoding-service
            port:
              number: 80
      - path: /delivery(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: delivery-service
            port:
              number: 80
      - path: /analytics(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: analytics-service
            port:
              number: 80
      - path: /prometheus(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: prometheus-service
            port:
              number: 9090
      - path: /grafana(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: grafana-service
            port:
              number: 3000
